# AutoGen_trial_2

./: .env.example  .gitignore  README.md
Project_docs/: project_implementation_prompts.md  project_structure.md
backend/: .env.example  pyproject.toml  requirements.txt  setup.py
backend/src/autogen_planner/: __init__.py  main.py
backend/src/autogen_planner/agents/: __init__.py  base.py  plan_agent.py  user_agent.py
backend/src/autogen_planner/api/: __init__.py  routes.py  schemas.py
backend/src/autogen_planner/config/: __init__.py  settings.py
backend/src/autogen_planner/services/: __init__.py
backend/src/autogen_planner/services/ai/: __init__.py  base.py  gemini.py
backend/src/autogen_planner/utils/: __init__.py  logging.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py
backend/tests/unit/agents/: __init__.py  test_plan_agent.py  test_user_agent.py
backend/tests/unit/services/: __init__.py
backend/tests/unit/services/ai/: __init__.py  test_gemini.py
deployment/: docker-compose.yml
deployment/backend/: Dockerfile  gunicorn.conf.py
deployment/frontend/: Dockerfile
docs/api/: endpoints.md
docs/architecture/: system_overview.md
docs/user_guides/: getting_started.md
frontend/: .env.example  requirements.txt
frontend/src/gradio_app/: __init__.py  api_client.py  app.py
frontend/src/gradio_app/components/: __init__.py  (+2 more)
frontend/tests/: __init__.py
frontend/tests/test_components/: __init__.py  test_chat.py
scripts/: run_local.ps1  setup_dev_env.ps1
(+2 files in other folders)
